# example-rust-gui

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
components/eth-price-oracle/: Cargo.toml
components/eth-price-oracle/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: config.rs  header.rs  main.rs  prelude.rs  route.rs
frontend/src/chain/: client.rs  contract.rs  mod.rs
frontend/src/chain/client/: bindings.rs  local.rs  viem.rs
frontend/src/pages/: app.rs  landing.rs  mod.rs  wallet_connect.rs
frontend/src/theme/color/: aliases.rs
shared/: Cargo.toml
shared/src/: lib.rs  price_feed.rs
