[workspace]
members = [
    "components/*",
    "frontend",
    "shared"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0-beta"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# LOCAL
shared = { path = "shared" }

# WAVS
wavs-types = "0.3.0-beta"

# WASI
wit-bindgen-rt = {version = "0.39.0", features = ["bitflags"]}
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-chain = "0.3.0-beta"

# Async
tokio = {version = "1.43.0", features = ["full"]}
futures = "0.3.31"
async-trait = "0.1.85"
async-broadcast = "0.7.2"

# Networking
reqwest = {version = "0.12.12", features=["json"]}

# Data formats
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
const-hex = "1.14.0"

## Alloy
alloy-primitives = {version = "0.8.20", features = ["serde"]}
alloy-sol-macro = {version = "0.8.20", features = ["json"]}
alloy-sol-types = "0.8.20"
alloy-json-rpc = "0.11.0"
alloy-provider = "0.11.0"
alloy-transport-http = "0.11.0"
alloy-transport = {version = "0.11.0", features = ["wasm-bindgen"]}
alloy-rpc-client = "0.11.0"
alloy-contract = "0.11.0"
alloy-signer = "0.11.0"
alloy-signer-local = {version = "0.11.0", features = ["mnemonic"]}
alloy-consensus = "0.11.1"

# Logging
tracing-subscriber = {version ="0.3.19", features = ["env-filter"]}
tracing = "0.1.41"
tracing-panic = "0.1.2"

# Misc
cfg-if = "1.0.0"

# Error handling
anyhow = "1.0.95"

# Frontend
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
dominator = "0.5.38"
futures-signals = "0.3.34"
gloo-events = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
tracing-web = "0.1.3"
dominator_helpers = "0.8.0"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Window",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement",
    "Performance"
]