[package]
name = "frontend"
description = "frontend"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# seems to be needed for dominator
getrandom = { version = "0.2", features = ["js"]}
shared = {workspace = true}
wavs-types = {workspace = true} 
serde = {workspace = true} 
serde_json = {workspace = true} 
serde-wasm-bindgen = {workspace = true} 
async-trait = {workspace = true} 
toml = {workspace = true} 
const-hex = {workspace = true} 
anyhow = {workspace = true} 
futures = {workspace = true} 
wasm-bindgen = {workspace = true}
js-sys = {workspace = true}
wasm-bindgen-futures = {workspace = true}
dominator = {workspace = true}
dominator_helpers = {workspace = true}
futures-signals = {workspace = true}
cfg-if = {workspace = true}
gloo-events = {workspace = true}
gloo-timers = {workspace = true}
reqwest = {workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-web = { workspace = true}
tracing-panic = { workspace = true}
web-sys = { workspace = true}
async-broadcast = { workspace = true}
alloy-primitives = { workspace = true }
alloy-sol-types = {workspace = true }
alloy-sol-macro = {workspace = true }
alloy-contract = {workspace = true }
alloy-json-rpc = {workspace = true} 
alloy-provider = {workspace = true} 
alloy-transport-http = {workspace = true} 
alloy-transport = {workspace = true}
alloy-rpc-client = {workspace = true} 
alloy-signer = {workspace = true}
alloy-signer-local = {workspace = true} 
alloy-consensus = {workspace = true} 